export default {
  uptateTime: '更新时间',
  lowUptateTime: '更新时间',
  mavenDependencies: "maven依赖",
  importPdf: "导出PDF",
  export: "导出",
  url: '地址',
  belong: '所属',
  name: '名称',
  creator: '创建者',
  project: '项目',
  titleProject: '项目',
  please: '请',
  enter: '输入',
  close:"关闭",
  open:"开启",
  grouping: '分组',
  clique: '集团',
  nameSpace: '命名空间',
  intranet: '内网',
  version: '版本',
  authority: '权限',
  description: '描述',
  groupAll: '全部分组',
  projectGrouping: '项目分组',
  edit: '编辑',
  delete: '删除',
  myProject: '我的项目',
  prompt: '提示',
  successDeleted: '删除成功!',
  successfullyModified: '修改成功',
  undelete: '取消删除!',
  updatedOn: '更新于',
  unfavorite: '取消收藏!',
  collectionSuccess: '收藏成功!',
  haveAltogether: '共有',
  projectItems: '个项目',
  newProject: '新建项目',
  IManage: '我管理的',
  noData: '暂无数据',
  myFavorite: '我收藏的',
  editSuccessfully: '编辑成功!',
  addedSuccessfully: '添加成功!',
  successfulApplication: "申请成功!",
  newProjectGroup: '新增项目分组',
  editProjectGroup: '编辑项目分组',
  recentVisit: '最近访问',
  recentlyViewed: '最近查看的API',
  nickName: '昵称',
  account: '账号',
  password: '密码',
  email: '邮箱',
  role: '角色',
  finish: '完成',
  first: '1',
  two: '2',
  three: '3',
  requestParameter: '请求参数',
  returnParameter: '返回参数',
  instructionManual: '备注说明',
  serviceAddress: '服务地址',
  load: '加载',
  selectAllMethod: '选择所有方法',
  interfaceName: '接口名称',
  interfaceDescription: '接口说明',
  serviceVersion: '服务版本',
  resetNum: '重试次数',
  serviceGrouping: '服务分组',
  serviceDescription: '服务描述',
  asynchronousCall: '异步调用',
  dataSynchronization: '数据同步',
  fullCoverage: '完全覆盖',
  normalMode: '普通模式',
  savedSuccessfully: '保存成功',
  updateCompleted: '更新成功',
  loadGateway: '加载网关',
  expm: '如',
  appName: '应用名称',
  routingType: '路由类型',
  path: '路径',
  overtimeTime: '超时时间',
  groupSearchAPI: '按名称/路径搜索API',
  newCategory: '新增分类',
  newCollection: '新增集合',
  editGroup: '编辑分组',
  deleteGroup: '删除分组',
  importAPI: '导入API',
  newAPI: '新建API',
  emptyRecycle: '清空回收站',
  deleteAPI: '删除API',
  copyAPI: '复制API',
  removeCollection: '从集合移除',
  title: '标题',
  content: '内容',
  collectionDocument: '集合文档',
  added: '已添加',
  notAdded: '未添加',
  expectedName: '期望名称',
  responseContent: '响应内容',
  submittedSuccessfully: '提交成功',
  parameter: '请求参数',
  copy: '复制',
  formEntry: '表单录入',
  jsonEntry: 'JSON录入',
  addTo: '添加',
  addSubdata: '添加子数据',
  details: '详情',
  test: '测试',
  catalog: '文档目录',
  yes: '是',
  no: '否',
  noDescription: '暂无描述',
  noAddress: '暂无地址',
  label: '标签',
  importJson: '导入Json',
  importData: '批量添加',
  bulkLoad: '批量加载',
  mockAddress: 'MOCK地址',
  customMock: '自定义MOCK',
  customize: '自定义',
  lastUpdater: '开发人员',
  updater: '更新者',
  lastUpdateTime: '最后更新时间',
  previewMoackExpectations: '预览Moack API期望',
  environmentName: '环境名称',
  environmentalDomainName: '环境域名',
  loading: '加载中',
  uploading: '上传中',
  shareCollection: '分享API集合',
  collectionName: '集合名称',
  collectionDescription: '集合描述',
  ouch: '哎哟!',
  apiCollectionList: 'API集合列表',
  items: '个',
  projectSummary: '项目概要',
  summaryBasicInformation: '基础信息',
  environmentConfiguration: '环境配置',
  projectDynamics: '项目动态',
  memberManagement: '成员管理',
  dataImport: '数据导入',
  projectDocumentation: '项目文档',
  projectName: '项目名称',
  belongingGroup: '所属分组',
  projectPermissions: '项目权限',
  projectDescription: '项目描述',
  dangerousOperation: '危险操作',
  deleteItem: '删除项目',
  environmentList: '环境列表',
  environment: '环境',
  newEnvironment: '新环境',
  addMember: '添加成员',
  randomData: "随机数据",
  importMethod: '导入方式',
  syncSettings: '同步设置',
  dataUpload: '数据上传',
  importedSuccessfully: '导入成功',
  addDocument: '添加文档',
  documentType: '类型',
  richText: '富文本',
  backList: '返回列表',
  undone: '未完成',
  completed: '已完成',
  deprecated: '弃用',
  administrator: '管理员',
  collaborationAdministrator: '协作管理员',
  ordinaryMember: '普通成员',
  member: '成员',
  visitor: '访客',
  sharedPermissions: '共有权限',
  privatePermissions: '私有权限',
  personalCenter: '个人中心',
  signOut: '退出登录',
  noName: '暂无名称',
  apiAddedSuccessfully: 'API添加成功',
  changeLog: '变更记录',
  now: '当前',
  versionDifference: 'API版本差异',
  difference: '版本差异',
  latestVersion: '最新版本',
  DubboType: 'dubbo类型',
  NonDubboType: '非dubbo类型',
  documentTitle: '文档标题',
  China: '中国',
  controllerName: 'Controller名称',
  projectRelatedController: '项目相关Controller',
  importFromProject: '从项目导入',
  addManully: '手动添加',
  newMethod: '新建方式',
  importDetails: '导入详情',
  importableController: '可导入的Controller',
  importableServices: '可导入的服务名',
  importableAPI: '可导入API',
  importableDubboAPI: '可导入方法名',
  APIClassification: 'API分类',
  genericParameter: '是否为泛型参数',
  whetherCarryAttachment: '是否携带attachment',
  chooseAPI: '选择API',
  itemName: '项目名',
  include: '包含',
  importable: '可导入',
  selectAll: '全选',
  extranet: '外网',
  setTheImageSize: '设置图片大小(px)',
  width: '宽',
  height: '高',
  serviceName: '服务名',
  funcName: '方法名',
  APIenvironment: 'API环境',
  serviceEnvironment: '服务环境',
  parameterBody: "参数体",
  useX5Protocol: "使用x5协议",
  interfaceAddress: "接口地址",
  copyText: "点击复制路径！",
  testCase: "测试用例",
  createNewGroup: "新建用例组",
  noTestCaseGroup: "暂无测试用例组",
  SelectSampleGroup: "保存测试用例",
  useUustomMock: "开启自定义Mock",
  exampleDescription: "示例说明",
  mockScript: "Mock脚本",
  noDirectory: "暂无目录",
  serviceIP: "服务IP",
  carryTag: "是否携带标签",
  testCaseConfirm: {
    text1: "确认删除 ",
    text2: " 吗?"
  },
  controllerTable: {
    onlyImportCurrent: '只导入当前',
    method: '的方法',
    emptyText: '暂无可导入API',
    hasSelected: '已选',
    items: '个'
  },
  grpcClass: {
    "projectNotConfigured": "项目未配置",
    "projectIsConfigured": "项目已配置"
  },
  detailList: {
    basicInformation: '基本信息',
    requestParameter: '请求参数',
    returnParameter: '返回参数',
    requestExample: '请求示例',
    returnExample: '返回示例',
    instructionManual: '备注说明',
    errorCodeExplanation: '错误码解释'
  },
  ApiClass: {
    type: 'API类型',
    category: '所属分类',
    name: 'API名称',
    path: 'API路径',
    parameters: 'API参数',
    serviceName: '服务名称',
    methodName: '方法名称',
    requestName: '请求方式',
    serviceStatus: '服务状态',
    apiStatus: 'API状态',
    apiDescription: 'API描述',
    interfacePath: '接口路径',
    interfaceStatus: '接口状态'
  },
  projectItemList: {
    have: '共',
    unit: '个API'
  },
  projectList: {
    deleteTip: '此操作将永久删除项目',
    continue: '是否继续'
  },
  placeholder: {
    selectGroup: '请选择分组',
    enterVersion: '请输入版本',
    enterAPIGroup: '请输入API分组',
    enterDesc: '请输入描述',
    enterProjectName: '请输入项目名称',
    enterGroupName: '请输入分组名称',
    searchProject: '搜索项目、API',
    pleaseChoose: '请选择',
    pleaseEnter: '请输入',
    serviceNotEmpty: '服务名称不能为空',
    pleaseEnterParameterName: '请输入参数名',
    pleaseEnterParameterValue: '请输入参数值',
    pleaseEnterParameterValueRule: '请输入参数值规则',
    pleaseSelectStatus: '请选择API状态',
    pleaseSelectCategory: '请选择所属分类',
    pleaseEnterInterfaceName: '请输入接口名称',
    pleaseSelectInterfaceName: '请选择接口名称',
    pleaseEnterName: '请输入名称',
    pleaseEnterMethodName: '请输入方法名称',
    pleaseEnterModule: '请输入模块',
    pleaseEnterType: '请输入类型',
    noDescription: '暂无备注说明',
    pleaseEnterPath: '请输入路径',
    pleaseChooseType: '请选择类型',
    pleaseEnterAppName: '请输入应用名称',
    pleaseEnterServiceName: '请输入服务名称',
    pleaseEnterServiceVersion: '请输入服务版本',
    PleaseFillGroup: '请填写分组',
    pleaseEnterEnvironmentName: '请输入环境名称',
    pleaseEnterAddress: '请输入地址',
    pleaseSelectMethodName: '请选择方法名',
    testEnvironment: '测试环境',
    searchApiPath: '按路径搜索API',
    deleteEnvironment: '删除环境',
    pleaseEnterDocumentTitle: '请输入文档标题',
    pleaseEnterNumberRetries: '请输入重试次数',
    pleaseEnterErrorCode: '请输入错误码',
    pleaseEnterWrongInformation: '请输入错误信息',
    pleaseEnterSolution: '请输入解决方案',
    pleaseEnterWidth: '请输入宽度',
    pleaseEnterHeight: '请输入高度',
    PleaseEnterPackageName: '请输入包名',
    pleaseEnterUseCaseName: "请输入用例名称"
  },
  btnText: {
    cancel: '取 消',
    ok: '确 定',
    search: '搜 索',
    saveReturn: '保存返回',
    nextStep: '下一步',
    previous: '上一步',
    submit: '提 交',
    confirmSave: '确认保存',
    save: '保 存',
    saveAs: '另存为',
    back: '返回',
    preview: '预览',
    close: '关闭',
    delete: '删除',
    operate: '操作',
    newExpectations: '新建期望',
    copy: '点击复制',
    test: '测试',
    newTestEnvironment: '新建测试环境',
    copyAddress: '复制地址',
    check: '查看',
    createLink: '创建链接',
    modify: '修改',
    confirmDelete: '确定删除',
    submitApi: '提交API',
    editApi: '编辑API',
    cancelEdit: '取消编辑',
    newApi: '新建API',
    shareCollection: '分享集合',
    compared: '对比',
    manualSync: "手动同步",
    apply: "权限申请",
    rollback: "回滚",
  },
  errorMessage: {
    pathError: '路径不能包含空格',
    notSpacesAndCharacters: '服务名不能包含空格和汉字',
    checkError: '校验错误',
    pleaseFilldesiredName: '请填写期望名称',
    errorRequestParameters: '请求参数不正确',
    parameterNameNotRepeated: '请求参数名不能重复',
    responseContentFormat: '响应内容格式不正确',
    ResponseContentNameNotRepeated: '响应内容名称不能重复',
    serviceNameNotSpacesCharacters: '服务名不能包含空格和汉字',
    selectRequestMethod: '请选择请求方式',
    selectTestEnvironment: '请选择测试环境',
    requestHeaderSameKey: '请求头部包含相同key',
    queryParameterSameKey: 'Query参数包含相同key',
    requestBodySameKey: '请求体包含相同key',
    pleaseGroupName: '请填写分组名称',
    parameterError: '参数错误',
    projectNameNotMatch: '项目名称不匹配',
    fileReadFailed: '文件读取失败',
    fileContentFormatIncorrect: '文件内容格式不正确',
    sorryHavePermission: '非常抱歉，您没有权限',
    requestError: '请求错误',
    networkError: '网络错误',
    jsonFormatWrong: 'Json格式有误',
    pleaseFillName: '请填写名称',
    pleaseFillUrl: '请填写URL',
    incorrectRequestHeaderFormat: '请求头部格式不正确',
    incorrectRequestParameterFormat: '请求参数格式不正确',
    returnParameterFormatIncorrect: '返回参数格式不正确',
    returnParameterNameNotRepeated: '返回参数名不能重复',
    pleaseEnterCommitInformation: '请输入commit信息',
    pleaseEnterCorrectRetries: '请输入正确的重试次数',
    controllerNameNotEmpty: 'Controller名称不能包含空格和汉字',
    incorrectFormatImportedData: '导入数据格式不正确',
    importAddressEmpty: '导入地址(url)为空',
    pleaseSelectImportAPI: '请选择导入API',
    pleaseSelectAnAPI: '请选择API',
    mustBeNumber: '必须为数字',
    manualUpdateSucceeded: "手动同步成功",
    pleaseEnterServiceAddress: "请输入服务地址",
    parameterBodyFormatError: "参数体格式错误",
    pleaseEnterCaseGroupName: "请输入用例（组）名称",
    X5ProtocolNotEmpty: "请填写X5协议信息",
    importPdfErrorNum: "最多选择30个API",
  },
  router: {
    apiList: '接口列表',
    apiCollection: 'API集合',
    apiTest: 'API测试',
    projectSummary: '项目概要',
    home: '首页',
    personalCenter: '个人中心',
    shareCollection: '分享集合',
    useDocumentation: '平台使用文档',
    shareDocument: '分享文档',
    browserTips: "强烈推荐使用谷歌浏览器😊～"
  },
  table: {
    name: '名称',
    parameterName: '参数名',
    parameterValue: '参数默认值',
    parameterType: '参数类型',
    generationRules: '生成规则',
    required: '必填',
    instruction: '说明',
    versionID: '版本ID',
    changePerson: '变更人',
    changedesc: '变更描述',
    errorCode: '错误码',
    wrongInformation: '错误信息',
    solution: '解决方案'
  },
  userList: {
    name: '姓名',
    role: '角色'
  },
  detailMockTips: {
    first: 'get调用获取Mock结果，默认请求参数为空(系统默认)，',
    sec: '可以在Mock API中设置请求参数和返回结果。'
  },
  mockTable: {
    expectedName: '期望名称',
    updater: '更新者',
    lastUpdateTime: '最后更新时间',
    preview: '预览',
    delete: '删除',
    stop: '停用',
    enable: '启用'
  },
  mockWarn: {
    deleteTip: '此操作将永久删除',
    continue: '是否继续'
  },
  deleteGroupTips: {
    first: '此操作将永久删除组',
    sec: '是否继续'
  },
  apiTest: {
    requestConfiguration: '请求配置',
    ipPort: 'IP端口',
    parameterList: '参数列表',
    jsonArray: 'JSON数组',
    requestHeader: '请求头部',
    requestBody: '请求体',
    queryParameters: 'Query参数',
    X5Permissions: 'X5权限',
    hidden: '个已隐藏',
    hideAutomaticallyHeader: '隐藏自动生成的头',
    content: '内容',
    returnResult: '返回结果',
    newEnvironment: '新建环境'
  },
  importApi: {
    optional: '可选API',
    selected: '已选API'
  },
  dynamicList: {
    add: '添加',
    modify: '修改',
    delete: '删除',
    other: '其他',
    project: '项目',
    apiGrouping: 'API分组',
    statusCode: '状态码',
    statusCodeGrouping: '状态码分组',
    projectEnvironment: '项目环境',
    teamCooperation: '团队协作',
    documentGrouping: '文档分组',
    documentation: '文档'
  },
  importInfoDialog: {
    first: '您已成功导入',
    sec: '个接口信息。'
  },
  deleteDocument: {
    first: '此操作将永久删除此文档',
    sec: '是否继续?'
  },
  breadcrumb: {
    newMockExpectations: '新建Mock API期望',
    editMockExpectations: '编辑Mock API期望',
    newApi: '新建API',
    importApi: '导入API',
    apiTesting: 'API测试',
    newCollectionDocument: '新建集合文档'
  },
  versionDiffInfo: {
    desc: '历史版本与最新版本差异对比。',
    color1: '粉红',
    exp1: '为历史版本内容。',
    color2: '浅绿',
    exp2: '为最新版本内容。'
  },
  addProjectDialogTips: '任何人都可以搜索并查看项目(组)信息 /只有项目(组)成员可以搜索并查看项目(组)信息',
  deleteProjectGroupTip: '此操作将永久删除该项目组, 是否继续?',
  basicInformation: '填写基本信息',
  requestData: '填写请求数据',
  loadAddress: '加载已有服务地址',
  createNewAPI: '创建新API',
  createManually: '手动创建',
  noExistingService: '没有已存在的服务地址?',
  definitionTips: '根据API定义的是否异步显示',
  notImportExistingInterfaces: '不导入已存在的接口',
  notImportExistingInterfacesTips: '不保留旧数据，完全使用新数据，适用于接口定义完全交给后端定义',
  notExistSelectCollection: '集合不存在，请重新选择集合',
  needDirectionallyDefaultNacosService: '需要定向调用ip的服务时填写，不填写默认调用nacos服务',
  multipleAddressesWillRandomlySelectOneCall: "多个地址将随机选取一个进行调用",
  operationDeleteApi: '此操作将永久删除该API, 是否继续?',
  operationRemoveCollectionContinue: '此操作将从该集合移除API, 是否继续?',
  successfullyCreatedCategory: '成功新建API分类',
  successfullyCreateInterfaceCollection: '成功新建接口集合',
  newApiCategory: '新增API分类',
  editApiCategory: '编辑API分类',
  editCollection: '编辑集合',
  successfullyCreatedSharingLink: '成功创建分享链接',
  pageMissing: '页面走丢了',
  notPageInfo: '请检查您输入的网址是否正确，或点击下方按钮返回首页。',
  backHomepage: '回到首页',
  notAuthorizedPage: '页面不存在或无权访问该页面',
  deleteProjectInfo: '项目一旦删除，将无法恢复数据，请慎重操作！只有管理员有权限删除项目.',
  deleteDialogTitle: '确认删除APP服务端项目吗？',
  deleteDialogContent: '警告：此操作非常危险,会删除该项目下面所有接口，并且无法恢复!',
  deleteConfirmOper: '请输入项目名称确认此操作：',
  deleteUser: '此操作将删除该用户, 是否继续?',
  randomDataInfo: "是否自动生成随机数据",
  swaggerImportMethodInfo: `目前仅支持Swagger的json导入`,
  clickDragUpload: '点击或将文件拖拽到这里上传',
  swaggerImportSupport2: 'Swagger数据导入（ 支持 v2.0+ ）',
  editChangeImgSizeTips: '注: 设置具体尺寸后将无法通过百分比改变大小',
  dubboApplyInfo: "权限将由本项目admin审批，通过后一天内可调用该服务",
  apiTestGatewayEnvOption: {
    "testEnvironmentSupportHttp&Https": "测试环境(支持http和https协议)",
    "testEnvironmentSupportHttp": "测试环境(支持http协议)",
    "testEnvironmentExternalDomainName": "测试环境外网域名",
    "intranetEnvironmentSupportHttpProtocol": "内网环境(支持http协议)",
    "intranetEnvironmentSupportHttp&HttpsProtocols": "内网环境(支持http和https协议)",
    "onlineEnvironment": "外网线上环境"
  },
  customMockDescription: {
    title1: "全局变量",
    title2: "使用方法",
    method1: "1.首先开启此功能。",
    method2: "2.Mock 脚本就是用 JavaScript 对 mockJson 变量修改。",
    exmp1: "示例1, 根据请求参数重写 mockJson",
    exmp2: "示例2, 生成高度自定义数据内容",
    headerDesc: "请求的HTTP头",
    paramsDesc: "请求参数，包括Body、Query中所有参数",
    cookieDesc: "请求带的Cookies",
    mockJsonDesc: "接口定义的响应数据Mock模板",
    randomDesc: "Mock.Random方法，可以添加自定义占位符"
  },
  importPdfTips: "每次最多选择30个"
}
